tests/invalid/dict_magic_len_wrong_arg_count/main.py
def run_case() -> None:
    d: dict[int, int] = {1: 10}
    n: int = d.__len__(1)


if __name__ == "__main__":
    run_case()
